Fix alignment of portfolio H2

--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ a:hover {
   float: left;
   height: 250px;
   overflow: hidden;
-  text-align: center;
+  text-align: right;
   cursor: pointer;
   position: relative;
   z-index: 1;
